<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@android:color/background_light"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="50px"
              android:gravity="center_horizontal">

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:gravity="center_horizontal"
              android:paddingBottom="30px"
              android:textSize="20px"
              android:textStyle="bold"
              android:textColor="@android:color/black"
              android:text="@string/textoEntrada"/>

    <TextView android:layout_height="wrap_content"
              android:textColor="@android:color/black"
              android:gravity="center_horizontal"
              android:layout_width="wrap_content"
              android:paddingBottom="30px"
              android:textStyle="bold"
              android:text="@string/textoEntrada2"/>

    <Button android:id="@+id/btnNovaCompra" android:layout_width="wrap_content"
            android:text="@string/btn_novaCompra"
            android:gravity="center"
            android:drawableRight="@drawable/shoppingcart"
            android:layout_height="wrap_content"
            android:onClick="novaCompra"
            />
    <!--<Button android:id="@+id/btnRecuperaCompra" android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Recupera Compra"-->
            <!--/>-->
</LinearLayout>

