<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:background="@android:color/background_light"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <TextView android:layout_marginLeft="10px"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/descItem"/>

    <EditText
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:id="@+id/desc_item"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

    <TextView
            android:layout_marginLeft="10px"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/qtdItemLabel"/>

    <EditText
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:id="@+id/qtd_item"
            android:numeric="integer"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

    <TextView
            android:layout_marginLeft="10px"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/precoUnitarioLabel"/>

    <EditText
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:id="@+id/precoUnitario"
            android:numeric="decimal"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

    <LinearLayout
            android:background="@android:color/background_light"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/photo24"
                android:onClick="tirarFoto"

                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"/>

        <Button android:drawableLeft="@drawable/qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="scanQRCode"/>


        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/insert"
                android:onClick="incluirItem"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"/>

    </LinearLayout>

    <TextView android:id="@+id/total"
              android:layout_marginLeft="10px"
              android:layout_marginRight="10px"
              android:textColor="@android:color/black"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:textSize="20px"
              android:text="Total: "
              android:background="@drawable/back"/>

    <ListView
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:id="@+id/listaItens"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

</LinearLayout>